# axum-auth

./: .gitignore  Cargo.toml  README.md  database.sqlite.example
src/: main.rs  routes.rs
src/common/: database.rs  error.rs  mod.rs  structs.rs
src/handler/: mod.rs  public.rs
src/handler/session/: getuser.rs  login.rs  logout.rs  mod.rs  register.rs
src/middleware/: session.rs
