[package]
name = "axum-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bcrypt = "0.15.1"
chrono = "0.4.38"
cookie = "0.18.1"
dotenv = "0.15.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tower_governor = "0.4.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4"] }
